; ModuleID = '/home/carl/AnghaBench/linux/drivers/visorbus/extr_visorchipset.c_chipset_notready_uevent.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/visorbus/extr_visorchipset.c_chipset_notready_uevent.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { %struct.TYPE_6__* }
%struct.TYPE_6__ = type { %struct.TYPE_5__ }
%struct.TYPE_5__ = type { i32 }
%struct.controlvm_message_header = type { %struct.TYPE_7__ }
%struct.TYPE_7__ = type { i64 }

@chipset_dev = common dso_local global %struct.TYPE_8__* null, align 8
@KOBJ_OFFLINE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.controlvm_message_header*)* @chipset_notready_uevent to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @chipset_notready_uevent(%struct.controlvm_message_header* %0) #0 {
  %2 = alloca %struct.controlvm_message_header*, align 8
  %3 = alloca i32, align 4
  store %struct.controlvm_message_header* %0, %struct.controlvm_message_header** %2, align 8
  %4 = load %struct.TYPE_8__*, %struct.TYPE_8__** @chipset_dev, align 8
  %5 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %4, i32 0, i32 0
  %6 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %7 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %6, i32 0, i32 0
  %8 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %7, i32 0, i32 0
  %9 = load i32, i32* @KOBJ_OFFLINE, align 4
  %10 = call i32 @kobject_uevent(i32* %8, i32 %9)
  store i32 %10, i32* %3, align 4
  %11 = load %struct.controlvm_message_header*, %struct.controlvm_message_header** %2, align 8
  %12 = getelementptr inbounds %struct.controlvm_message_header, %struct.controlvm_message_header* %11, i32 0, i32 0
  %13 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %20

16:                                               ; preds = %1
  %17 = load %struct.controlvm_message_header*, %struct.controlvm_message_header** %2, align 8
  %18 = load i32, i32* %3, align 4
  %19 = call i32 @controlvm_respond(%struct.controlvm_message_header* %17, i32 %18, i32* null)
  br label %20

20:                                               ; preds = %16, %1
  %21 = load i32, i32* %3, align 4
  ret i32 %21
}

declare dso_local i32 @kobject_uevent(i32*, i32) #1

declare dso_local i32 @controlvm_respond(%struct.controlvm_message_header*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
